src/objects/EventApi__Event_Registration_Style__mdt.object
<CustomObject>
    <description>Stores registration styles for events.</description>
    <fields>
        <fullName>EventApi__Is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this style will be available on the event builder.</description>
        <inlineHelpText>When checked, this style will be available on the event builder.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Style_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this style will be available on the event builder.</description>
        <inlineHelpText>When checked, this style will be available on the event builder.</inlineHelpText>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Target_Page__c</fullName>
        <description>**REQUIRED** Name of the lightning/visualforce page that will be used to generate the event&apos;s URL.</description>
        <inlineHelpText>**REQUIRED** Name of the lightning/visualforce page that will be used to generate the event&apos;s URL.</inlineHelpText>
        <label>Target Page</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Event Registration Style</label>
    <pluralLabel>Event Registration Styles</pluralLabel>
</CustomObject>